// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetInvolvedLinkCard renders with multiple buttons 1`] = `
<div>
  <div
    class="sc-aXZVg sc-gEvEer jeZXij iwFTtF"
  >
    <div
      class="sc-aXZVg sc-gEvEer dFOKqz dfjiUz"
    >
      <h3
        class="sc-eldPxv cgHAhQ"
      >
        Help us improve
      </h3>
      Teachers are at the heart of everything we build.
    </div>
    <div
      class="sc-aXZVg sc-gEvEer dFOKqz ehpWeg"
    >
      <div
        class="sc-aXZVg sc-kpDqfm beToGt cvxBYX"
      >
        <div
          class="sc-aXZVg jLhxzq grey-shadow"
        />
        <div
          class="sc-aXZVg jLhxzq yellow-shadow"
        />
        <a
          class="sc-dcJsrY sc-jXbUNg bALQkH khQbhv internal-button"
          href="https://example.com/research"
        >
          <div
            class="sc-aXZVg sc-gEvEer dFOKqz krHAKs"
          >
            <span
              class="sc-eqUAAy edqVpV"
            >
              Join the research panel
            </span>
          </div>
        </a>
      </div>
      <div
        class="sc-aXZVg sc-kpDqfm beToGt cvxBYX"
      >
        <div
          class="sc-aXZVg jLhxzq grey-shadow"
        />
        <div
          class="sc-aXZVg jLhxzq yellow-shadow"
        />
        <a
          class="sc-dcJsrY sc-jXbUNg bALQkH khQbhv internal-button"
          href="https://example.com/explore"
        >
          <div
            class="sc-aXZVg sc-gEvEer dFOKqz krHAKs"
          >
            <span
              class="sc-eqUAAy edqVpV"
            >
              Explore our research
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GetInvolvedLinkCard renders with single button 1`] = `
<div>
  <div
    class="sc-aXZVg sc-gEvEer jeZXij iwFTtF"
  >
    <div
      class="sc-aXZVg sc-gEvEer dFOKqz dfjiUz"
    >
      <h2
        class="sc-eldPxv cgHAhQ"
      >
        Give your feedback
      </h2>
      Share your story and we'll send you a gift voucher as a thanks for your time. Whether you've planned more efficiently, strengthened your subject knowledge or refreshed your curriculum design, your experience can inspire other teachers.
    </div>
    <div
      class="sc-aXZVg sc-gEvEer dFOKqz ehpWeg"
    >
      <div
        class="sc-aXZVg sc-kpDqfm beToGt cvxBYX"
      >
        <div
          class="sc-aXZVg jLhxzq grey-shadow"
        />
        <div
          class="sc-aXZVg jLhxzq yellow-shadow"
        />
        <a
          class="sc-dcJsrY sc-jXbUNg bALQkH khQbhv internal-button"
          href="#"
        >
          <div
            class="sc-aXZVg sc-gEvEer dFOKqz krHAKs"
          >
            <span
              class="sc-eqUAAy edqVpV"
            >
              Get in touch
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GetInvolvedLinkCard renders without buttons 1`] = `
<div>
  <div
    class="sc-aXZVg sc-gEvEer jeZXij iwFTtF"
  >
    <div
      class="sc-aXZVg sc-gEvEer dFOKqz dfjiUz"
    >
      <h3
        class="sc-eldPxv cgHAhQ"
      >
        No Buttons
      </h3>
      Content without buttons
    </div>
  </div>
</div>
`;
